plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

allprojects {
    repositories {
        mavenCentral()
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

tasks.register("buildAll") {
    dependsOn(
            ":client:build",
            "servlet:build"
    )
    application {
        mainClass = 'rpm.ui.app.RpmApp'
    }

    sourceSets {
        main {
            java {
                srcDirs = ['src']
            }
        }
    }

    javafx {
        version = "17.0.10"
        modules = ['javafx.controls']
    }
}
